--- a/typeposter/index.html
+++ b/typeposter/index.html
@@ -114,21 +114,21 @@
 
 
 <h1>How It Made</h1>
-
 <div class="row">
-  <div class="column"></div>
   <div class="column"></div>
 </div>
 
 <p class="column">H</p>
 <p class="column">O</p>
 <P class="column">W</P>
+
 <p class="column">I</p>
 <P class="column">T</P>
-<P class="column">M</P>
+
+<P class="column2">M</P>
 <P class="column">A</P>
 <P class="column">D</P>
-<P class="column">E</P>
+<P class="column3">E</P>
 
 
 <p class="column100">February 19</p>
@@ -136,14 +136,14 @@
 <p  class="column100">
   Each year, the American Advertising Federation recognizes some of the best creative work in the country. A three-tiered creative competition, entrants must first compete on a local level through an affiliated AAF chapter. Work awarded a gold or silver at the local level can advance to the second tier, the AAF District 7 competition. Recipients of gold and silver awards at this level can advance on to the national competition, where winners are presented at the national AAF convention each year.
 </p>
-<h2>The American Advertising Awards</h2>
-  <p>The American Advertising Awards® is the advertising industry’s largest and most representative competition, attracting over 40,000 entries every year in local chapter of the American Advertising Federation (AAF) competitions. The mission of the competition is to recognize and reward the creative spirit of excellence in the art of advertising.
+<h2 class="column100">The American Advertising Awards</h2>
+  <p class="column100">The American Advertising Awards® is the advertising industry’s largest and most representative competition, attracting over 40,000 entries every year in local chapter of the American Advertising Federation (AAF) competitions. The mission of the competition is to recognize and reward the creative spirit of excellence in the art of advertising.
   Conducted annually by the AAF, the local Ad Club phase is the first of a three-tier, national competition. Concurrently, all across the country, local entrants vie to receive an ADDY Award—recognition as the very best in their markets. At the second tier, local ADDY winners compete against winners from other local clubs in one of 15 district competitions. District ADDY winners are then forwarded to the third tier, the national stage of the American Advertising Awards. Entry in your local Ad Club competition is the first step toward winning a national ADDY.
   Entering the American Advertising Awards supports the entire advertising industry, because the AAF and its local and district affiliates use the proceeds to enhance advertising through programs such as public service, internships, advocacy groups, advertising education, and consumer awareness.</p>
-<h3>How Do I Win An ADDY?</h3>
-  <p>A panel of judges evaluate the winning work through a scoring process. All entries are evaluated independently, which means there may not be a winner in every category if the entry does not score high enough. A GOLD ADDY is recognition of the highest level of creative excellence and is judged to be superior to all other entries in the category. Entries that are also considered outstanding and worthy of recognition receive a SILVER ADDY. The number of awards given in each category is determined by the judges, based on the relative quality of work in that category.</p>
-<h3>Who Can Enter?</h3>
-  <p>This competition is open to all creative services and industry suppliers including but not limited to advertising, graphic design, photographers, printers, newspaper, radio, television, web, marketing and communication professionals as well as students studying in these areas. The submission must be work created locally.</p>
+<h3 class="column100">How Do I Win An ADDY?</h3>
+  <p class="column100">A panel of judges evaluate the winning work through a scoring process. All entries are evaluated independently, which means there may not be a winner in every category if the entry does not score high enough. A GOLD ADDY is recognition of the highest level of creative excellence and is judged to be superior to all other entries in the category. Entries that are also considered outstanding and worthy of recognition receive a SILVER ADDY. The number of awards given in each category is determined by the judges, based on the relative quality of work in that category.</p>
+<h3 class="column100">Who Can Enter?</h3>
+  <p class="column100">This competition is open to all creative services and industry suppliers including but not limited to advertising, graphic design, photographers, printers, newspaper, radio, television, web, marketing and communication professionals as well as students studying in these areas. The submission must be work created locally.</p>
 
 
 
